@@ -33,8 +33,10 @@ bug fixes:
   o IDE: display warnings after reload
 
 IDE:
-  o conf file not automatically saved anymore at exit
-  o right part of main window organized in tabs
+  o config file not automatically saved anymore at exit. Configuration
+    is saved on disk for future sessions if, and only if, preferences
+    window is exited by hitting the "Save&Close" button
+  o right part of main window organized in tabs.
 
 version 0.85, September 17, 2014
 ================================
